components/printing/renderer/print_render_frame_helper.cc
@@ -792,11 +792,11 @@ void PrepareFrameAndViewForPrint::ResizeForPrinting() {
 }
 
 void PrepareFrameAndViewForPrint::StartPrinting() {
+  ResizeForPrinting();
   blink::WebView* web_view = frame_.view();
   web_view->GetSettings()->SetShouldPrintBackgrounds(should_print_backgrounds_);
   expected_pages_count_ =
       frame()->PrintBegin(web_print_params_, node_to_print_);
-  ResizeForPrinting();
   is_printing_started_ = true;
 }
 
